# whisplayChat

./: clients.py  groktts.py  helpers.py  instructions.py  local_voice.py  main.py  messages.py  pyau_test.py  pyproject.toml  temp.py  test.py  test_audio_helper.py  utils.py  voice_agent.py
Driver/: WhisPlay.py  install_wm8960_drive.sh
example/: record_play_demo.py  requirements.txt  run_record_demo.sh  run_test.sh  test.py  test2.py
tests/: test.py  test_audio_helper.py
