[project]
name = "whisplaychat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "openai>=2.28.0",
    "pillow>=12.1.1",
    "piper-tts>=1.4.1",
    "pyaudio>=0.2.14",
    "pydantic>=2.12.5",
    "pygame>=2.6.1",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "websockets>=16.0",
]
